<resources>
    <string name="app_name">ChildApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="main_childbtn">Configure Child</string>
    <string name="main_coinbtn">Flip Coin</string>
    <string name="main_timebtn">Timeout Timer</string>
    <string name="main_title">Practical Parent</string>
    <string name="main_taskbtn">Edit Task</string>
    <string name="Take_Breath">Take Breath</string>
    <string name="timer_watch">00:00</string>
    <string name="timer_startbtn">Start</string>
    <string name="timer_resetbtn">reset</string>
    <string name="timer_1min">1</string>
    <string name="timer_2min">2</string>
    <string name="timer_5min">5</string>
    <string name="timer_10min">10</string>
    <string name="timer_3min">3</string>
    <string name="timer_custombtn">Custom</string>
    <string name="timer_custom_text">Custom Time (Minutes)</string>
    <string name="timer_set_text">Set Time (Minutes)</string>


    <string name="list_item_edit">Edit</string>
    <string name="choose_coin_des1">Select choosing child:</string>
    <string name="choose_coin_des2">Select rival:</string>
    <string name="choose_coin_des4">History:</string>
    <string name="choose_coin_des3">Choose:</string>
    <string name="choose_coin_rdbHead">Head</string>
    <string name="choose_coin_rdbTail">Tail</string>
    <string name="choose_coin_HisOption">Selected Child Only</string>
    <string name="choose_coin_des5">Date</string>
    <string name="choose_coin_des6">Chooser</string>
    <string name="choose_coin_des7">Opponent</string>
    <string name="choose_coin_des8">Choice</string>
    <string name="choose_coin_des9">Result</string>
    <string name="choose_coin_con">Continue</string>
    <string name="config_name">Name:</string>
    <string name="config_coin">Flip Coin</string>
    <string name="config_fea">Configure Features:</string>
    <string name="config_save">Save</string>
    <string name="config_dele">Delete</string>
    <string name="config_saveclose">Save and Close</string>
    <string name="flip_flip">Flip</string>

    <string name="main_help">Help</string>
    <string name="help_title">INFORMATION</string>
    <string name="help_text">Created by: Team Khaki\n\nTeam members:\nGabriel Yeung\nJeffrey Song\nSamuel Leong\nSteven Wang\n\nCredits:
    Fesliyan Studios Inc\n

    </string>


    <string name="config_take">Take Photo</string>
    <string name="config_gallery">Gallery</string>


    <string name="enter_task_description">Enter Task Description</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="warning_nochild_taskend">NO CHILD REMAINS</string>
    <string name="confirm">Confirm</string>
    <string name="next_child">Next Child:</string>
    <string name="next_task">Next Task:</string>
    <string name="unknown">Unknown</string>
    <string name="last_child_info_view">This is the last child</string>
    <string name="whose_turn">Whose Turn</string>
    <string name="head_name">Heads</string>
    <string name="tail_name">Tails</string>
    <string name="info_save1">Cannot save because name is empty</string>
    <string name="info_save2">Cannot save because there is already a same name</string>
    <string name="info_warn_delete">Deleted</string>
    <string name="info_warn_delete2">Cannot delete because you are creating a new one</string>
    <string name="info_warn_create_title">you have already created one with the same title</string>
    <string name="excl_heads">Heads!</string>
    <string name="excl_tails">Tails!</string>
    <string name="warning_not_saving">This flip won\'t be recorded since only one or no child is selected</string>
    <string name="noChildWarning">No child detected, will flip coin directly</string>
    <string name="pause_warning">Pause Timer First</string>
    <string name="greater_0_warning">You must have enter a time that greater than 0</string>
    <string name="Enter_time_warning">Enter a time</string>
    <string name="winner">" (Winner)"</string>
    <string name="winnerTag">(Winner)</string>

    <string name="_25">25%</string>
    <string name="_50">50%</string>
    <string name="_75">75%</string>
    <string name="_100">100%</string>
    <string name="_200">200%</string>
    <string name="_300">300%</string>
    <string name="_400">400%</string>

    <string name="let_s_take">Let\'s take</string>
    <string name="breath_together">Breaths Together</string>
    <string name="instruction">Instruction</string>
    <string name="begin">Begin</string>
    <string name="breath_in">IN</string>
    <string name="ready_instruc">Set times to Breathe and Press Begin</string>
    <string name="start_in_instrcut">Hold In button to start breathing</string>
    <string name="instruction_in">In ... ... ...</string>
    <string name="after10SecIn">Release the Button and Breathe Out</string>
    <string name="after3secIn">3 seconds passed... inhale done</string>
    <string name="start_out_instrcut">Hold button to start Breathe Out</string>
    <string name="breath_out">OUT</string>
    <string name="instruction_out">Out... ... ...</string>
    <string name="after3secOut_needmore">you completed a cycle, let\'s breath more</string>
    <string name="breath3secOut_notEnough">you should breathe out more</string>
    <string name="welldoneInstruction">Well Done! You completed the breathing activity</string>
    <string name="gj">Good Job</string>
    <string name="after10secOut">Pressing too long, assuming you are done</string>
    <string name="outok">You breathed out enough, release the button</string>


</resources>