<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/menu_25"
            android:checkable="false"
            android:title="@string/_25" />
        <item
            android:id="@+id/menu_50"
            android:checkable="false"
            android:title="@string/_50" />
        <item
            android:id="@+id/menu_75"
            android:checkable="false"
            android:title="@string/_75" />
        <item
            android:id="@+id/menu_100"
            android:checkable="false"
            android:title="@string/_100" />
        <item
            android:id="@+id/menu_200"
            android:checkable="false"
            android:title="@string/_200" />
        <item
            android:id="@+id/menu_300"
            android:checkable="false"
            android:title="@string/_300" />
        <item
            android:id="@+id/menu_400"
            android:checkable="false"
            android:title="@string/_400" />
    </group>

</menu>