<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/enter_task_description"
        android:textSize="15dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_close_task"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:text="@string/config_save"

            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete_task"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:text="@string/delete"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel_task"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:text="@string/cancel"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>