<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.cmpt276.childapp.TakeBreathActivity">

    <TextView
        android:id="@+id/txtDes1_breath"
        android:layout_width="109dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/let_s_take"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDes_breath2"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="2dp"
        android:text="@string/breath_together"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="385dp"
        android:layout_height="73dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:text="@string/instruction"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDes1_breath" />

    <Button
        android:id="@+id/btnMainBreath"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="163dp"
        android:layout_height="151dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="35dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spnBreathNum"
        android:layout_width="64dp"
        android:layout_height="84dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="5dp"
        android:scrollbarSize="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/txtInstruction"
        app:layout_constraintStart_toEndOf="@+id/txtDes1_breath"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>